# stk

./: .gitignore  config.json  run.py
config/: cfg_stk.py  config.json  lxr_assets.json  stk_assets_simple.json
config/daily_holding/: README  parse_daily_holdings.py  stock_info.json  stock_info_test.json
config/sample/: 000001.SZ.csv  recording_qmt1.jsonl
cpp/: .clangd  .gitignore  CMakeLists.txt  build.bat
cpp/include/: binary_parser.hpp  json_config.hpp  technical_analysis.hpp
cpp/include/define/: CBuffer.hpp  DQueue.hpp  Dtype.hpp
cpp/include/math/: LimitOrderBook.hpp  OrderFlowImbalance.hpp
cpp/include/misc/: affinity.hpp  misc.hpp  print.hpp
cpp/script/: bookmap.py
cpp/src/: binary_parser.cpp  inverse_matching_engine.cpp  json_config.cpp  main.cpp  technical_analysis.cpp
py/: main.py
py/app/DataProvider_API/: License.py
py/app/Util/: UtilStk.py
py/config/: cfg_stk.py
py/config/info/: shenwan2021.json
py/config/sample/: sh600000_20250603.csv
